# peek-core-user

./: .gitignore  README.rst  bamboo_ut.sh  publish.settings.sh  publish.sh  pyproject.toml  setup.py  sonar-project.properties
peek_core_user/: __init__.py  plugin_package.json
peek_core_user/_private/: alembic.ini
peek_core_user/_private/admin-app/: user.module.ts
peek_core_user/_private/both-app/: plugin-user.routes.ts
peek_core_user/_private/ldap_auth/: ldap_auth.py
peek_core_user/_private/server/: ClientTupleDataObservable.py  PluginLogicEntryHook.py
peek_core_user/_private/storage/: DirectoryTuple.py  InternalGroupTuple.py  InternalUserGroupTuple.py  InternalUserTuple.py  LdapSetting.py  Setting.py  UserLoggedIn.py
peek_core_user/doc-admin/admin-ui/: admin-ui.rst
peek_core_user/plugin-module/: package.json
peek_core_user/plugin-module/services/: logged-in.guard.ts  user.service.ts
peek_core_user/server/: UserApiABC.py  UserFieldHookApiABC.py  UserInfoApiABC.py
peek_core_user/tuples/: DeviceWithUserDetails.py  UserDetailTuple.py
peek_plugin_user/: __init__.py  plugin_package.json
peek_plugin_user/_private/: PluginNames.py
peek_plugin_user/_private/admin-app/: user.component.html  user.module.ts
peek_plugin_user/_private/agent/: AgentEntryHook.py
peek_plugin_user/plugin-module/: package.json
peek_plugin_user/server/: UserApiABC.py  UserDbErrors.py  UserHookApiABC.py  UserImportApiABC.py  UserInfoApiABC.py  UserLoginApiABC.py
peek_plugin_user/tuples/: GroupDetailTuple.py  UserDetailTuple.py  UserListItemTuple.py
(+110 files in other folders)
